<resources>
    <string name="app_name">PILATIME</string>
    <string name="title_activity_admin_calendar">AdminCalendarActivity</string>
    <string name="title_calendar">일정관리</string>
    <string name="title_member">회원관리</string>
    <string name="title_goods">상품관리</string>
    <string name="title_notifications">공지사항</string>

    <!--login string -->
    <string name="title_activity_main__login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--member string-->
    <string name="title_calendar_member">"일정관리"</string>
    <string name="title_class_Manage">"수업관리"</string>
    <string name="title_goods_member">"수업조회"</string>
    <string name="title_notifications_member">"공지사항"</string>

</resources>
