<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_calendar_member"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_calendar_member" />

    <item
        android:id="@+id/navigation_classManage"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_class_Manage"/>

    <item
        android:id="@+id/navigation_goods_member"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_goods_member" />

    <item
        android:id="@+id/navigation_notifications_member"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications_member" />

</menu>
