<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_member"
    app:startDestination="@+id/navigation_calendar_member">

    <fragment
        android:id="@+id/navigation_calendar_member"
        android:name="com.soongsil.pilatime.uiMember.calendar.CalendarMemberFragment"
        android:label="@string/title_calendar_member"
        tools:layout="@layout/fragment_calendar_member" />

    <fragment
        android:id="@+id/navigation_classManage"
        android:name="com.soongsil.pilatime.uiMember.member.ClassManageFragment"
        android:label="@string/title_class_Manage"
        tools:layout="@layout/fragment_class_manage" />

    <fragment
        android:id="@+id/navigation_goods_member"
        android:name="com.soongsil.pilatime.uiMember.goods.GoodsMemberFragment"
        android:label="@string/title_goods_member"
        tools:layout="@layout/fragment_goods_member" />

    <fragment
        android:id="@+id/navigation_notifications_member"
        android:name="com.soongsil.pilatime.uiMember.notifications.NotificationsMemberFragment"
        android:label="@string/title_notifications_member"
        tools:layout="@layout/fragment_notifications_member" />
</navigation>